--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                           </li>
                           <li>
                               <label for="name">Name</label>
-                              <input type="tetx" placeholder="Charles Wong" required />
+                              <input type="tetx" placeholder="Agnes Tay" required />
                               <span class="form_hint">Name is required</span>
                           </li>
                           <li>
@@ -62,11 +62,12 @@
                 </ul>
                 <br>
                 <p>
-                    Charles provides professional services in the area of website design, UI/UX and mobile app development.
-                    He also handles SEO for clients' websites
+                    Our Team provides professional services in the area of website design, UI/UX and mobile app development.
+                    We also handles SEO for clients' websites
                 </p>
                 <p>
-                    He has built dozens of websites using the Wordpress framework. Send him your requirements and start now!
+                    Our development team is resided locally and has vast experience in building dozens of websites using the Wordpress framework. 
+                    Send in your requirements and see for yourself to believe!
                 </p>
             </aside>
 
