--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
                 <section>
                     <h2>Brief Intro of Myself</h2>
                     <p>
-                        Charles is currently a Digital Marketing Lead
-                        He specialises in online marketing.
-                        He handles SEO, SEM and Social Media Marketing, and also manages the websites in the company.    
+                        I started off my career as a sales operations analyst. 
+                        I developed my interest in analytics. 
+                        I found myself a new opportunity as a Sales Analyst which I enjoyed. Then due to some personal reason, I 
+                        came into a new world of e-marketing world.I found a mentor and he shared with me the importance to learn codings
+                        to upgrade my skillset. I am not sure if I can go far, but having some fundamental, I am amazed what's happening in 
+                        the background to bring us these very beautiful websites, game sites, etc
                     </p>                      
                 </section>
                     
                 <section>
                         <h2>Experience</h2>
-                        <p>He has more than 10 years of marketing experience. He is always keen on learning to code. He also loves UI/UX design.</p>
+                        <p>My team has great experience in building websites and mobile applications </p>
                 </section>
             </article>
 
@@ -43,12 +46,11 @@
                 </ul>
                 <br>
                 <p>
-                    Charles provides professional services in the area of website design, UI/UX and mobile app development.
-                    He also handles SEO for clients' websites
+                    This is a new platform I am exploring.
+                    Looking forward to your support
                 </p>
                 <p>
-                    He has built dozens of websites using the Wordpress framework. Send him your requirements and start now!
-                </p>
+                   I have a team of dedicated developers to handle your request. Send in your request and we will be in touch with you soon
             </aside>
 
             <footer>
